# template-github-copilot

./: .env.template  .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: dependabot.yaml
copilot_cli_tutorial/: index.html
copilot_report_forge/: index.html
copilot_sdk_tutorial/: index.html
src/python/: .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  api.Dockerfile  compose.docker.yaml  compose.yaml  copilot.Dockerfile  pyproject.toml
src/python/scripts/: agents.py  api_server.py  blob.py  byok.py  chat.py  report_service.py  slacks.py
src/python/scripts/tutorials/: 01_chat_bot.py  02_issue_triage.py  03_streaming_review.py  04_skills_docgen.py  05_audit_hooks.py  06_byok_azure_openai.py  README.md  _telemetry.py
src/python/scripts/tutorials/skills/coding-standards/: SKILL.md
src/python/scripts/tutorials/skills/docgen/: SKILL.md
src/python/template_github_copilot/: core.py  loggers.py  providers.py
src/python/template_github_copilot/internals/: agents.py  azure_blob_storages.py
src/python/template_github_copilot/internals/tools/: __init__.py  foundry_agent.py  korin_weather.py
src/python/template_github_copilot/services/: __init__.py  chat.py  reports.py
src/python/template_github_copilot/services/apis/: __init__.py  app.py  settings.py
src/python/template_github_copilot/services/apis/static/css/: style.css
src/python/template_github_copilot/services/apis/static/js/: core.js
src/python/template_github_copilot/services/apis/static/js/tabs/: chat.js  report.js
src/python/template_github_copilot/services/apis/templates/: index.html
src/python/template_github_copilot/settings/: __init__.py  azure_blob_storage.py  byok.py  copilot.py  microsoft_foundry.py  oauth.py
src/python/template_github_copilot/tests/: test_settings.py
src/python/template_github_copilot/tools/: __init__.py
src/python/tests/: test_core.py  test_loggers.py  test_providers.py  test_tutorial_telemetry.py
src/python/tests/internals/: test_agents.py  test_azure_blob_storages.py
src/python/tests/services/: test_reports.py
src/python/tests/services/apis/: __init__.py  test_app.py
src/python/tests/settings/: test_azure_blob_storage.py  test_byok.py  test_microsoft_foundry.py  test_oauth.py  test_project.py
src/python/tests/tools/: test_foundry_agent.py
(+303 files in other folders)
