[project]
name = "template-github-copilot"
version = "0.1.0"
description = "A comprehensive templates for GitHub Copilot"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-agents>=1.2.0b6",
    "azure-ai-projects>=2.0.0b3",
    "azure-identity>=1.25.2",
    "azure-storage-blob>=12.28.0",
    "github-copilot-sdk>=0.1.25",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "pyrefly>=0.53.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
